Bug 1004198.  Improve codegen in testValueTruthyKernel to emit as few tests as we can get away with given our type inference information.  r=jandem